--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ push_job:
     - oma-runner
   script:
     - gcloud auth configure-docker
-    - docker image tag portfolio eu.gcr.io/portfolio/portfolio:latest
-    - docker image push eu.gcr.io/portfolio/portfolio:latest
+    - docker image tag portfolio eu.gcr.io/portfolio/portfolio
+    - docker image push eu.gcr.io/portfolio/portfolio
     
 deploy_job:
   stage: deploy
