--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,74 +1,8 @@
  # DEPLOYMENTS
-
-- name: Install docker
-  hosts:
-    - _portfolio
-  become: true
-  tasks:
-    - name: Chace update
-      apt:
-        update_cache: yes
-        cache_valid_time: 3600
-        
-    - name: Prepare docker
-      apt:
-        name:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - gnupg-agent
-          - software-properties-common
-        state: present
-        
-    - name: Add an apt signing key for Docker
-      apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
-        
-    - name: Repository
-      apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
-        state: present
-        update_cache: yes  
-            
-    - name: Install docker
-      apt:
-        name:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
-          - python3-pip
-        state: present
-        
-    - name: Docker-py
-      pip:
-        name: docker-py
-                
-# start portfolio container
-- name: Portfolio container
-  hosts: _portfolio
-  become: true
-  tasks:
-    - name: Get GCR token
-      become: false
-      shell: /snap/bin/gcloud auth print-access-token
-      register: gcr_token
-      
-    - name: Login to GCR
-      docker_login:
-        username: oauth2accesstoken
-        password: "{{ gcr_token.stdout }}"
-        registry_url: eu.gcr.io
-        
-    - name: Pull Portfolio
-      docker_image:
-        name: eu.gcr.io/portfolio/portfolio
-        source: pull
-        
     - name: Run Portfolio
       docker_container:
-        name: frontend
-        image: eu.gcr.io/portfolio/portfolio
+        name: portfolio
+        image: portfolio
         ports:
           - "3000:3000"
 
