--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,13 +1,14 @@
-- name: Portfolio container
-  hosts: frontend
+- name: Run Portfolio container
   become: true
   tasks:
     - name: Start Portfolio
       service:
         name: portfolio
+        image: portfolio
+        state: started
         ports:
           - "80:3000"
-        state: started
+
 
 
 
